minor fix (icon alignment at footer)

--- a/assets/css/style-footer.css
+++ b/assets/css/style-footer.css
@@ -95,6 +95,8 @@ section.footer div p img{
 
     padding: 0;
     margin: 0;
+
+    left: -10px;
 }
 
 i{
@@ -124,6 +126,10 @@ i{
         width: 50%;
     }
 
+    section.footer div img{
+        width: 40%;
+    }
+
     section.footer div .long-text{
         width: 60%;
     }
@@ -138,5 +144,9 @@ i{
     input[type="text"]{
         width: 300px;
         margin-right: 25px;
+    }
+
+    .icons{
+        left: -610px;
     }
 }
